﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system


##################################################################
opsi-winst/opsi-script (4.12.1.2) stable; urgency=low

  * add oslistedit to projectfiles
  * fixes in oslistedit
  * add osinputstring
  * add new string function stringinput(< message str>,< boolstr confidential>)
  * document randomIntStr(<>)
  * fix on gettemppath

-- Detlef Oertel <d.oertel@uib.de>  Fri, 12 Apr 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.1.1) stable; urgency=low

  * fix in oswmi (give stringlist as stringlist)

-- Detlef Oertel <d.oertel@uib.de>  Thu, 04 04 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.1.0) experimental; urgency=low

  * integration of new xml functions:
    * new units in common: osxml, osxmltdom, osxmlsections
    * new section type xml2
    * osparser: Tuibinstscript: new method doxml2patch:
      * OpenNode <node path : string>
      * DeleteNode <node path : string>
      * setNodeText <text : string>
      * setAttribute <name : string>, <value:string>
      * addAttribute <name : string>, <value:string>
      * delAttribute <name : string>
      * adNewNode <name : string>
      * gotoParentNode
    * getXml2AttributeValueByKey(<xml node:stringlist>,<key:string>): string
    * getXml2Text(<xml node:stringlist>) : string
    * getXml2DocumentFromFile(<filename:string>) : <xml-doc:stringlist>
    * getXml2Document(<pure xml :stringlist>) : <xml-doc:stringlist>
    * getXml2UniqueChildnodeByName
    * xml2GetFirstChildNodeByName(<xml-doc:stringlist>,<node name:string>) : <xml node:stringlist>
    * xml2NodeExistsByPathInXMLFile(myfilename, path: string; attributes_strict: boolean): boolean;

  * new regex functions:
  * isRegexMatch(<string>, <pattern>) : boolean
  * getSubListByContainingRegex(<pattern>, <target list>) : stringlist
  * getSubListByContainingRegex(<pattern list>, <target list>) : stringlist